# shared-contracts

./: BUILD.bazel  MODULE.bazel  WORKSPACE  openapi.yaml
proto/: payment.proto  settlement.proto  webhook.proto
scripts/: bazel_commit.bat  bazel_commit.ps1  bazel_commit.sh
