load("@rules_proto//proto:defs.bzl", "proto_library")

sh_binary(
    name = "commit",
    srcs = ["scripts/bazel_commit.sh"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "payment_proto",
    srcs = ["proto/payment.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "settlement_proto",
    srcs = ["proto/settlement.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "webhook_proto",
    srcs = ["proto/webhook.proto"],
    visibility = ["//visibility:public"],
)


