load("@rules_proto//proto:defs.bzl", "proto_library")

sh_binary(
    name = "commit",
    srcs = ["scripts/bazel_commit.bat", "scripts/bazel_commit.ps1"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "payment_proto",
    srcs = ["proto/payment.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "settlement_proto",
    srcs = ["proto/settlement.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "webhook_proto",
    srcs = ["proto/webhook.proto"],
    visibility = ["//visibility:public"],
)

# Exporting for other workspaces
filegroup(
    name = "protos",
    srcs = glob(["proto/*.proto"]),
    visibility = ["//visibility:public"],
)
